[package]
name = "stylex_structures"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Struct and data model definitions for the StyleX compiler plugin"


[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
swc_core = { workspace = true, features = [
  "common",
  "ecma_ast",
  "ecma_utils",
] }
indexmap.workspace = true
rustc-hash.workspace = true
derive_more.workspace = true
once_cell.workspace = true
log.workspace = true

stylex_constants = { path = "../stylex-constants" }
stylex_macros = { path = "../stylex-macros" }

[dev-dependencies]
ctor.workspace = true
pretty_env_logger.workspace = true
