[package]
description = "StyleQ implementation for the StyleX system"
edition.workspace = true
license.workspace = true
name = "stylex_styleq"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
doctest = false

[dependencies]
indexmap.workspace = true
log.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
criterion.workspace = true
serial_test.workspace = true

[[bench]]
harness = false
name = "performance_bench"

[lints]
workspace = true
