[package]
name = "stylex_swc_plugin"
version = "0.6.0"
edition = "2021"
rust-version = "1.82.0"
description = "SWC plugin for StyleX"
license = "MIT"
repository = "https://github.com/Dwlad90/stylex-swc-plugin.git"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
swc_core = { workspace = true, features = [
  "common",
  "ecma_plugin_transform",
  "ecma_utils",
  "ecma_parser",
  "ecma_codegen",
  "css_codegen",
  "css_visit",
  "css_parser",
  "css_ast",
] }

log.workspace = true
pretty_env_logger.workspace = true
color-backtrace.workspace = true
ctor.workspace = true
env_logger.workspace = true

swc_ecma_parser = { version = "*", features = ["verify"] }

stylex_path_resolver = { path = "../stylex-path-resolver" }
stylex_shared = { path = "../stylex-shared" }


# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.

# wasm-pack build --target web --dev -d dist --out-name index
