[package]
name = "stylex_test_parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Test parser for StyleX"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
swc_core = { workspace = true, features = [
  "common",
  "ecma_plugin_transform",
  "ecma_utils",
  "ecma_parser",
  "ecma_codegen",
] }
swc_config.workspace = true
swc_compiler_base = { workspace = true, features = ["node"] }
swc_ecma_parser = { workspace = true, features = ["verify"] }
fancy-regex.workspace = true
serde_json.workspace = true
anyhow.workspace = true
log.workspace = true
pretty_env_logger.workspace = true
color-backtrace.workspace = true
ctor.workspace = true
env_logger.workspace = true

clap = { version = "4.5.51", features = ["derive"] }
walkdir = { version = "2.5.0" }
