[package]
description = "Test parser for StyleX"
edition.workspace = true
license.workspace = true
name = "stylex_test_parser"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
color-backtrace.workspace = true
ctor.workspace = true
env_logger.workspace = true
fancy-regex.workspace = true
log.workspace = true
pretty_env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
swc_compiler_base = { workspace = true, features = ["node"] }
swc_config.workspace = true
swc_core = { workspace = true, features = [
  "common",
  "ecma_codegen",
  "ecma_parser",
  "ecma_plugin_transform",
  "ecma_utils",
] }
swc_ecma_parser = { workspace = true, features = ["verify"] }

clap = { version = "4.5.60", features = ["derive"] }
walkdir = { version = "2.5.0" }
