[package]
description = "SWC Fold implementation, StateManager and transform orchestration for StyleX"
edition.workspace = true
license.workspace = true
name = "stylex_transform"
repository.workspace = true
rust-version.workspace = true
version.workspace = true


[lib]
## With this config build fails with error: `linking with `cc` failed: exit status: 1`
# crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
anyhow.workspace = true
base62.workspace = true
cssparser.workspace = true
ctor.workspace = true
derive_more.workspace = true
fancy-regex.workspace = true
indexmap.workspace = true
lazy_static.workspace = true
log.workspace = true
md5.workspace = true
murmur2.workspace = true
node-resolve.workspace = true
once_cell.workspace = true
path-clean.workspace = true
phf = { workspace = true, features = ["macros"] }
pretty_env_logger.workspace = true
radix_fmt.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
swc_compiler_base = { workspace = true, features = ["node"] }
swc_config.workspace = true
swc_core = { workspace = true, features = [
  "common",
  "css_ast",
  "css_codegen",
  "css_parser",
  "css_visit",
  "ecma_codegen",
  "ecma_parser",
  "ecma_plugin_transform",
  "ecma_transforms_typescript",
  "ecma_utils",
] }
swc_ecma_parser = { workspace = true, features = ["verify"] }

stylex_ast = { path = "../stylex-ast" }
stylex_constants = { path = "../stylex-constants" }
stylex_css = { path = "../stylex-css" }
stylex_css_parser = { path = "../stylex-css-parser" }
stylex_enums = { path = "../stylex-enums" }
stylex_logs = { path = "../stylex-logs" }
stylex_macros = { path = "../stylex-macros" }
stylex_path_resolver = { path = "../stylex-path-resolver" }
stylex_regex = { path = "../stylex-regex" }
stylex_structures = { path = "../stylex-structures" }
stylex_types = { path = "../stylex-types" }
stylex_utils = { path = "../stylex-utils" }

[dev-dependencies]
insta = { workspace = true, features = ["yaml"] }
swc_core = { workspace = true, features = [
  "ecma_parser",
  "ecma_utils",
  "testing_transform",
] }
testing.workspace = true
