[package]
description = "SWC VisitMut implementation, StateManager and transform orchestration for StyleX"
edition.workspace = true
license.workspace = true
name = "stylex_transform"
repository.workspace = true
rust-version.workspace = true
version.workspace = true


[lib]
## With this config build fails with error: `linking with `cc` failed: exit status: 1`
# crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
anyhow.workspace = true
ctor.workspace = true
indexmap.workspace = true
log.workspace = true
node-resolve.workspace = true
path-clean.workspace = true
phf = { workspace = true, features = ["macros"] }
pretty_env_logger.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
stylex_ast = { path = "../stylex-ast" }
stylex_constants = { path = "../stylex-constants" }
stylex_css = { path = "../stylex-css" }
stylex_css_parser = { path = "../stylex-css-parser" }
stylex_enums = { path = "../stylex-enums" }
stylex_evaluator = { path = "../stylex-evaluator" }
stylex_macros = { path = "../stylex-macros" }
stylex_path_resolver = { path = "../stylex-path-resolver" }
stylex_regex = { path = "../stylex-regex" }
stylex_structures = { path = "../stylex-structures" }
stylex_styleq = { path = "../stylex-styleq" }
stylex_types = { path = "../stylex-types" }
stylex_utils = { path = "../stylex-utils" }
swc_compiler_base = { workspace = true, features = ["node"] }
swc_config.workspace = true
swc_core = { workspace = true, features = [
  "common",
  "css_ast",
  "css_codegen",
  "css_parser",
  "css_visit",
  "ecma_codegen",
  "ecma_parser",
  "ecma_plugin_transform",
  "ecma_transforms_typescript",
  "ecma_utils",
] }
swc_ecma_parser = { workspace = true, features = ["verify"] }

[dev-dependencies]
criterion.workspace = true
insta = { workspace = true, features = ["yaml"] }
swc_core = { workspace = true, features = [
  "ecma_parser",
  "ecma_utils",
  "testing_transform",
] }
testing.workspace = true

[[bench]]
harness = false
name = "evaluate_bench"

[lints]
workspace = true
