[package]
description = "StyleX API transformer implementations (create, defineVars, keyframes, etc.)"
edition.workspace = true
license.workspace = true
name = "stylex_transformers"
repository.workspace = true
rust-version.workspace = true
version.workspace = true


[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
indexmap.workspace = true
log.workspace = true
rustc-hash.workspace = true
swc_core = { workspace = true, features = [
  "common",
  "ecma_codegen",
  "ecma_parser",
  "ecma_plugin_transform",
  "ecma_utils",
] }

stylex_ast = { path = "../stylex-ast" }
stylex_constants = { path = "../stylex-constants" }
stylex_css = { path = "../stylex-css" }
stylex_evaluator = { path = "../stylex-evaluator" }
stylex_macros = { path = "../stylex-macros" }
stylex_types = { path = "../stylex-types" }

[dev-dependencies]
ctor.workspace = true
pretty_env_logger.workspace = true
